plugin-1.1.2-rc1: test new features for minecraft 1.20.2, see [milestone/3](https://github.com/Jaffe2718/Command-Debug-DevKit/milestone/3)